src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core_ng__runtimes__prisma__type_generation__test__aggregate Record out.snap
---
source: src/typegraph/core-ng/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: struct #19
├─ [_avg]: struct 'Record_avg_aggregate' #13
│  └─ [age]: optional 'optional_12' #12
│     └─ item: float #11
├─ [_count]: struct 'Record_count_aggregate' #10
│  ├─ [_all]: optional 'optional_9' #9
│  │  └─ item: integer #8
│  ├─ [age]: optional 'optional_9' #9
│  │  └─ item: integer #8
│  ├─ [created_at]: optional 'optional_9' #9
│  │  └─ item: integer #8
│  ├─ [id]: optional 'optional_9' #9
│  │  └─ item: integer #8
│  └─ [name]: optional 'optional_9' #9
│     └─ item: integer #8
├─ [_max]: struct 'Record_number_aggregate' #18
│  └─ [age]: optional 'optional_17' #17
│     └─ item: integer #16
├─ [_min]: struct 'Record_number_aggregate' #18
│  └─ [age]: optional 'optional_17' #17
│     └─ item: integer #16
└─ [_sum]: struct 'Record_number_aggregate' #18
   └─ [age]: optional 'optional_17' #17
      └─ item: integer #16
