src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core_ng__runtimes__prisma__type_generation__test__create_many Record inp.snap
---
source: src/typegraph/core-ng/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(inp)
---
root: struct #11
└─ [data]: list 'list_10' #10
   └─ item: struct 'Record_create_input' #9
      ├─ [age]: optional 'optional_6' #6
      │  └─ item: integer #5
      ├─ [created_at]: string #1
      ├─ [id]: optional 'optional_8' #8
      │  └─ item: string #2
      └─ [name]: string #4
