src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core_ng__runtimes__prisma__type_generation__test__find_first Record out.snap
---
source: src/typegraph/core-ng/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(out)
---
root: optional 'optional_9' #9
└─ item: struct 'Record_output' #8
   ├─ [age]: optional 'optional_6' #6
   │  └─ item: integer #5
   ├─ [created_at]: string #1
   ├─ [id]: string #3
   └─ [name]: string #4
