src/typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core_ng__runtimes__prisma__type_generation__test__find_many Record inp.snap
---
source: src/typegraph/core-ng/src/runtimes/prisma/type_generation/mod.rs
expression: tp.print(inp)
---
root: struct 'Record_query_input' #71
├─ [cursor]: optional 'optional_67' #67
│  └─ item: union 'Record_cursor' #66
│     ├─ variant_0: struct #62
│     │  └─ [id]: string #2
│     ├─ variant_1: struct #63
│     │  └─ [name]: string #4
│     ├─ variant_2: struct #64
│     │  └─ [age]: integer #5
│     └─ variant_3: struct #65
│        └─ [created_at]: string #0
├─ [distinct]: optional 'optional_70' #70
│  └─ item: list 'Record_keys_union' #69
│     └─ item: string #68 enum{ '"id"', '"name"', '"age"', '"created_at"' }
├─ [orderBy]: optional 'optional_57' #57
│  └─ item: list 'Record_order_by' #56
│     └─ item: struct #55
│        ├─ [age]: optional '_prisma_sort_nullable' #54
│        │  └─ item: union #53
│        │     ├─ variant_0: struct #52
│        │     │  ├─ [nulls]: string '_prisma_nulls_order' #48 enum{ '"first"', '"last"' }
│        │     │  └─ [sort]: string '_prisma_sort_order' #47 enum{ '"asc"', '"desc"' }
│        │     └─ variant_1: string '_prisma_sort_order' #47 enum{ '"asc"', '"desc"' }
│        ├─ [created_at]: optional '_prisma_sort' #51
│        │  └─ item: union #50
│        │     ├─ variant_0: struct #49
│        │     │  └─ [sort]: string '_prisma_sort_order' #47 enum{ '"asc"', '"desc"' }
│        │     └─ variant_1: string '_prisma_sort_order' #47 enum{ '"asc"', '"desc"' }
│        ├─ [id]: optional '_prisma_sort' #51
│        │  └─ item: union #50
│        │     ├─ variant_0: struct #49
│        │     │  └─ [sort]: string '_prisma_sort_order' #47 enum{ '"asc"', '"desc"' }
│        │     └─ variant_1: string '_prisma_sort_order' #47 enum{ '"asc"', '"desc"' }
│        └─ [name]: optional '_prisma_sort' #51
│           └─ item: union #50
│              ├─ variant_0: struct #49
│              │  └─ [sort]: string '_prisma_sort_order' #47 enum{ '"asc"', '"desc"' }
│              └─ variant_1: string '_prisma_sort_order' #47 enum{ '"asc"', '"desc"' }
├─ [skip]: optional 'optional_61' #61
│  └─ item: integer '_skip' #60
├─ [take]: optional 'optional_59' #59
│  └─ item: integer '_take' #58
└─ [where]: optional 'optional_46' #46
   └─ item: struct 'Record_query_where_input' #45
      ├─ [AND]: optional 'optional_43' #43
      │  └─ item: list 'list_42' #42
      │     └─ item: &Record_query_where_input #41
      ├─ [NOT]: optional 'optional_44' #44
      │  └─ item: &Record_query_where_input #41
      ├─ [OR]: optional 'optional_43' #43
      │  └─ item: list 'list_42' #42
      │     └─ item: &Record_query_where_input #41
      ├─ [age]: optional 'optional_38' #38
      │  └─ item: optional '_prisma_integer_filter_ex' #37
      │     └─ item: union #36
      │        ├─ variant_0: either '_prisma_integer_filter' #34
      │        │  ├─ variant_0: integer #26
      │        │  ├─ variant_1: struct #29
      │        │  │  └─ [equals]: integer #26
      │        │  ├─ variant_2: struct #30
      │        │  │  └─ [not]: integer #26
      │        │  ├─ variant_3: struct #31
      │        │  │  ├─ [gt]: optional 'optional_27' #27
      │        │  │  │  └─ item: integer #26
      │        │  │  ├─ [gte]: optional 'optional_27' #27
      │        │  │  │  └─ item: integer #26
      │        │  │  ├─ [lt]: optional 'optional_27' #27
      │        │  │  │  └─ item: integer #26
      │        │  │  └─ [lte]: optional 'optional_27' #27
      │        │  │     └─ item: integer #26
      │        │  ├─ variant_4: struct #32
      │        │  │  └─ [in]: list 'list_28' #28
      │        │  │     └─ item: integer #26
      │        │  └─ variant_5: struct #33
      │        │     └─ [notIn]: list 'list_28' #28
      │        │        └─ item: integer #26
      │        └─ variant_1: struct #35
      │           └─ [not]: either '_prisma_integer_filter' #34
      │              ├─ variant_0: integer #26
      │              ├─ variant_1: struct #29
      │              │  └─ [equals]: integer #26
      │              ├─ variant_2: struct #30
      │              │  └─ [not]: integer #26
      │              ├─ variant_3: struct #31
      │              │  ├─ [gt]: optional 'optional_27' #27
      │              │  │  └─ item: integer #26
      │              │  ├─ [gte]: optional 'optional_27' #27
      │              │  │  └─ item: integer #26
      │              │  ├─ [lt]: optional 'optional_27' #27
      │              │  │  └─ item: integer #26
      │              │  └─ [lte]: optional 'optional_27' #27
      │              │     └─ item: integer #26
      │              ├─ variant_4: struct #32
      │              │  └─ [in]: list 'list_28' #28
      │              │     └─ item: integer #26
      │              └─ variant_5: struct #33
      │                 └─ [notIn]: list 'list_28' #28
      │                    └─ item: integer #26
      ├─ [created_at]: optional 'optional_39' #39
      │  └─ item: optional '_prisma_string_filter_ex' #23
      │     └─ item: union #22
      │        ├─ variant_0: union '_prisma_string_filter' #20
      │        │  ├─ variant_0: string #8
      │        │  ├─ variant_1: struct #11
      │        │  │  └─ [equals]: string #8
      │        │  ├─ variant_2: struct #12
      │        │  │  └─ [not]: string #8
      │        │  ├─ variant_3: struct #13
      │        │  │  └─ [in]: list 'list_10' #10
      │        │  │     └─ item: string #8
      │        │  ├─ variant_4: struct #14
      │        │  │  └─ [notIn]: list 'list_10' #10
      │        │  │     └─ item: string #8
      │        │  ├─ variant_5: struct #17
      │        │  │  ├─ [contains]: string #8
      │        │  │  └─ [mode]: optional 'optional_16' #16
      │        │  │     └─ item: string #15 enum{ '"insensitive"' }
      │        │  ├─ variant_6: struct #18
      │        │  │  └─ [search]: string #8
      │        │  └─ variant_7: struct #19
      │        │     ├─ [endsWith]: optional 'optional_9' #9
      │        │     │  └─ item: string #8
      │        │     └─ [startsWith]: optional 'optional_9' #9
      │        │        └─ item: string #8
      │        └─ variant_1: struct #21
      │           └─ [not]: union '_prisma_string_filter' #20
      │              ├─ variant_0: string #8
      │              ├─ variant_1: struct #11
      │              │  └─ [equals]: string #8
      │              ├─ variant_2: struct #12
      │              │  └─ [not]: string #8
      │              ├─ variant_3: struct #13
      │              │  └─ [in]: list 'list_10' #10
      │              │     └─ item: string #8
      │              ├─ variant_4: struct #14
      │              │  └─ [notIn]: list 'list_10' #10
      │              │     └─ item: string #8
      │              ├─ variant_5: struct #17
      │              │  ├─ [contains]: string #8
      │              │  └─ [mode]: optional 'optional_16' #16
      │              │     └─ item: string #15 enum{ '"insensitive"' }
      │              ├─ variant_6: struct #18
      │              │  └─ [search]: string #8
      │              └─ variant_7: struct #19
      │                 ├─ [endsWith]: optional 'optional_9' #9
      │                 │  └─ item: string #8
      │                 └─ [startsWith]: optional 'optional_9' #9
      │                    └─ item: string #8
      ├─ [id]: optional 'optional_24' #24
      │  └─ item: optional '_prisma_string_filter_ex' #23
      │     └─ item: union #22
      │        ├─ variant_0: union '_prisma_string_filter' #20
      │        │  ├─ variant_0: string #8
      │        │  ├─ variant_1: struct #11
      │        │  │  └─ [equals]: string #8
      │        │  ├─ variant_2: struct #12
      │        │  │  └─ [not]: string #8
      │        │  ├─ variant_3: struct #13
      │        │  │  └─ [in]: list 'list_10' #10
      │        │  │     └─ item: string #8
      │        │  ├─ variant_4: struct #14
      │        │  │  └─ [notIn]: list 'list_10' #10
      │        │  │     └─ item: string #8
      │        │  ├─ variant_5: struct #17
      │        │  │  ├─ [contains]: string #8
      │        │  │  └─ [mode]: optional 'optional_16' #16
      │        │  │     └─ item: string #15 enum{ '"insensitive"' }
      │        │  ├─ variant_6: struct #18
      │        │  │  └─ [search]: string #8
      │        │  └─ variant_7: struct #19
      │        │     ├─ [endsWith]: optional 'optional_9' #9
      │        │     │  └─ item: string #8
      │        │     └─ [startsWith]: optional 'optional_9' #9
      │        │        └─ item: string #8
      │        └─ variant_1: struct #21
      │           └─ [not]: union '_prisma_string_filter' #20
      │              ├─ variant_0: string #8
      │              ├─ variant_1: struct #11
      │              │  └─ [equals]: string #8
      │              ├─ variant_2: struct #12
      │              │  └─ [not]: string #8
      │              ├─ variant_3: struct #13
      │              │  └─ [in]: list 'list_10' #10
      │              │     └─ item: string #8
      │              ├─ variant_4: struct #14
      │              │  └─ [notIn]: list 'list_10' #10
      │              │     └─ item: string #8
      │              ├─ variant_5: struct #17
      │              │  ├─ [contains]: string #8
      │              │  └─ [mode]: optional 'optional_16' #16
      │              │     └─ item: string #15 enum{ '"insensitive"' }
      │              ├─ variant_6: struct #18
      │              │  └─ [search]: string #8
      │              └─ variant_7: struct #19
      │                 ├─ [endsWith]: optional 'optional_9' #9
      │                 │  └─ item: string #8
      │                 └─ [startsWith]: optional 'optional_9' #9
      │                    └─ item: string #8
      └─ [name]: optional 'optional_25' #25
         └─ item: optional '_prisma_string_filter_ex' #23
            └─ item: union #22
               ├─ variant_0: union '_prisma_string_filter' #20
               │  ├─ variant_0: string #8
               │  ├─ variant_1: struct #11
               │  │  └─ [equals]: string #8
               │  ├─ variant_2: struct #12
               │  │  └─ [not]: string #8
               │  ├─ variant_3: struct #13
               │  │  └─ [in]: list 'list_10' #10
               │  │     └─ item: string #8
               │  ├─ variant_4: struct #14
               │  │  └─ [notIn]: list 'list_10' #10
               │  │     └─ item: string #8
               │  ├─ variant_5: struct #17
               │  │  ├─ [contains]: string #8
               │  │  └─ [mode]: optional 'optional_16' #16
               │  │     └─ item: string #15 enum{ '"insensitive"' }
               │  ├─ variant_6: struct #18
               │  │  └─ [search]: string #8
               │  └─ variant_7: struct #19
               │     ├─ [endsWith]: optional 'optional_9' #9
               │     │  └─ item: string #8
               │     └─ [startsWith]: optional 'optional_9' #9
               │        └─ item: string #8
               └─ variant_1: struct #21
                  └─ [not]: union '_prisma_string_filter' #20
                     ├─ variant_0: string #8
                     ├─ variant_1: struct #11
                     │  └─ [equals]: string #8
                     ├─ variant_2: struct #12
                     │  └─ [not]: string #8
                     ├─ variant_3: struct #13
                     │  └─ [in]: list 'list_10' #10
                     │     └─ item: string #8
                     ├─ variant_4: struct #14
                     │  └─ [notIn]: list 'list_10' #10
                     │     └─ item: string #8
                     ├─ variant_5: struct #17
                     │  ├─ [contains]: string #8
                     │  └─ [mode]: optional 'optional_16' #16
                     │     └─ item: string #15 enum{ '"insensitive"' }
                     ├─ variant_6: struct #18
                     │  └─ [search]: string #8
                     └─ variant_7: struct #19
                        ├─ [endsWith]: optional 'optional_9' #9
                        │  └─ item: string #8
                        └─ [startsWith]: optional 'optional_9' #9
                           └─ item: string #8
